Fixed Firefox bug: Images in two columns were displayed too wide

--- a/templates/components/globals/base.scss
+++ b/templates/components/globals/base.scss
@@ -1107,6 +1107,7 @@ body {
     img {
       @include rem(margin-top, 30px);
       max-width: 95%;
+      width: 100%;
     }
 
     section {
